lavf/matroskaenc: Do not write two CodecID elements for rawvideo.

Fixes ticket #6068.